@@ -34,9 +34,10 @@ public class WebSecurityConfig {
   @Bean
   public CorsConfigurationSource corsConfigurationSource() {
     CorsConfiguration configuration = new CorsConfiguration();
-    configuration.setAllowedOrigins(List.of("http://localhost:5174"));
+    configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173","http://localhost:5174"));
     configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
     configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+    configuration.setAllowedHeaders(List.of("*"));
     configuration.setAllowCredentials(true);
 
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -54,8 +55,8 @@ public class WebSecurityConfig {
         .requestMatchers("/h2-console/**").permitAll()
         .requestMatchers("/login").permitAll()
         .requestMatchers("/register").permitAll()
-       .requestMatchers("/users/**").permitAll()
-        .requestMatchers("/accounts").permitAll()
+        .requestMatchers("/users/**").permitAll()
+        .requestMatchers("/accounts/**").permitAll()
         .requestMatchers("/atm/**").permitAll()
         .requestMatchers("/transactions/**").permitAll()
         .anyRequest().authenticated());
